# rcli

./: .editorconfig  .gitignore  pyproject.toml  setup.cfg
amicon/: console.py  event.py  stream.py
amiga/: Makefile
amiga/rclid/: Makefile  init.c  rclid.c  rclid.h  runserv.c  serv.c  serv.h  shell.c  sockio.c  sockio.h  testclient.c  testsockio.c  testtimer.c  testvcon.c  vcon.c  vcon.h
amiga/rclid/include/: listutil.h
amiga/scripts/: define.mk  rule.mk
amiga/tools/: Makefile  termio.c  termio.h  tget.c  tput.c
python/amicon/: __init__.py  console.py  const.py  event.py  key.py  line.py  screen.py  stream.py  unixterm.py
python/rcli/: rcli.py
python/test/: test_amicon_console.py  test_amicon_event.py  test_amicon_key.py
rcli/: __main__.py  amicon.py  conconst.py  console.py  const.py  rcli.py  unixterm.py
scripts/: define.mk  gcc.mk  ndk.mk  rule.mk  vbcc.mk
src/: Makefile  buf.h  init.c  init.h  log.h  rclid.c  rclid.h  runserv.c  serv.c  serv.h  shell.c  shell.h  sockio.c  sockio.h  termio.c  termio.h  testclient.c  testshell.c  testsockio.c  testvcon.c  tget.c  timer.c  timer.h  vcon.c  vcon.h
test/: test_amicon_console.py  test_amicon_stream.py  test_console.py
